tests/neg/parser-stability-8.scala
case class I0 extends this  // error // error
